--- a/rpc-demo.ipynb
+++ b/rpc-demo.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas\n",
     "import memdem\n",
     "import planetary_computer\n",
     "import pystac_client\n",
     "import rasterio\n",
+    "import rasterio.plot\n",
     "import shapely\n",
     "import shapely.geometry\n",
     "import dask_geopandas\n",
@@ -892,7 +892,6 @@
     }
    ],
    "source": [
-    "demtiles = memdem.DEMTiles(bounds_geom.bounds, zoom=9)\n",
     "with demtiles.open() as dem:\n",
     "    with rasterio.transform.RPCTransformer(\n",
     "        src.rpcs, rpc_dem=dem.name, rpc_dem_srs=\"EPSG:3857+5773\"\n",
@@ -932,13 +931,6 @@
    "source": [
     "subset_pixel"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
