--- a/rpc-demo.ipynb
+++ b/rpc-demo.ipynb
@@ -40,20 +40,23 @@
     "\n",
     "Satellite imagery may not be projected to a coordinate reference system (CRS) but can still be georeferenced. This comes in the form of metadata associated with imagery that can be used to otherwise associate real world coordinates to pixel values in some way. The two primary methods of georeferencing are\n",
     "\n",
-    "- Ground control points (GCPs)\n",
-    "    - Collection of points mapping pixel coordinates to geographic/projected coordinates\n",
-    "    - Interpolate for uknown coordinate values\n",
-    "    - Most accurate near known GCPs, can be inconsistent for odd acquisition geometries\n",
-    "- Rational Polynomial Coefficients (RPCs)\n",
-    "    - Mathematical model mapping 3D (x, y, z) to 2D (row, column) coordinates based on sensor geometry\n",
-    "    - The inverse 2D (pixel) -> 3D (geographic) is implemented as an iterative solution by GDAL\n",
-    "    - only valid/accurate within the bounds of the scene/image\n",
-    "    - Additionally, depending on scene topography may require Digital Elevation Model (DEM) for accuracy"
+    "### Ground control points (GCPs)\n",
+    "- Collection of points mapping pixel coordinates to geographic/projected coordinates\n",
+    "- Interpolate for uknown coordinate values\n",
+    "- Most accurate near known GCPs, can be inconsistent for odd acquisition geometries\n",
+    "\n",
+    "<img src=\"https://i5.walmartimages.ca/images/Enlarge/668/371/6000198668371.jpg\" width=25% height=25%>\n",
+    "\n",
+    "### Rational Polynomial Coefficients (RPCs)\n",
+    "- Mathematical model mapping 3D (x, y, z) to 2D (row, column) coordinates based on sensor geometry\n",
+    "- The inverse 2D (pixel) -> 3D (geographic) is implemented as an iterative solution by GDAL\n",
+    "- only valid/accurate within the bounds of the scene/image\n",
+    "- Additionally, depending on scene topography may require Digital Elevation Model (DEM) for accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -78,12 +81,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use georeferencing"
+    "## Coordinate transforms\n",
+    "\n",
+    "- Affine transformation matrix\n",
+    "- GCPs\n",
+    "- RPCs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| 300.04, 0.00, 101985.00|\n",
+      "| 0.00,-300.04, 2826915.00|\n",
+      "| 0.00, 0.00, 1.00|\n",
+      "(102135.01896333754, 2826764.979108635)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with rasterio.open(\"https://github.com/rasterio/rasterio/blob/main/tests/data/RGB.byte.tif?raw=true\") as src_affine:\n",
+    "    print(src_affine.transform)\n",
+    "    print(src_affine.xy(0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +121,7 @@
        "(-123.48089279215108, 49.52808523973891)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +141,7 @@
        "(-123.47959047080701, 49.52794990575094)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
